--- a/Client/package.json
+++ b/Client/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "jwt-decode": "^3.1.2",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.42.1",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "sass": "^1.56.1"
   }
 }
