--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.0.4",
     "jwt-decode": "^3.1.2",
     "next": "13.0.4",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
